<resources>
    <string name="app_name">Inventory</string>
    <string name="item_editor_activity_title_new_item">Add an Item</string>
    <string name="item_editor_activity_title_edit_item">Edit Item</string>
    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="item_editor_insert_item_failed">Error with saving item</string>
    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="item_editor_insert_item_successful">Item saved</string>
    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="item_editor_update_item_failed">Error with updating item</string>
    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="item_editor_update_item_successful">Item updated</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>
    <!-- Dialog message to ask the user to confirm deleting the entire database [CHAR LIMIT=NONE] -->
    <string name="delete_database_dialog_msg">Delete all records?</string>
    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>
    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <!-- Toast message in new item activity when one or more fields are left blank [CHAR LIMIT=NONE] -->
    <string name="new_item_fields_missing">Please fill out all fields</string>
    <!-- TextView displayed when there are no items to be populated in the ListView [CHAR LIMIT=NONE] -->
    <string name="empty_database">Empty Database</string>
    <!-- TextView hint displayed telling users how to add items to the database [CHAR LIMIT=NONE] -->
    <string name="empty_database_hint">Click the + button to add an item</string>
    <!-- Menu option allowing the user to delete the entire database [CHAR LIMIT=NONE] -->
    <string name="delete_all_records">Delete All Records</string>
    <!-- Button in the Inventory Activity allowing user to sell one item at a time [CHAR LIMIT=NONE] -->
    <string name="sell">Sell</string>
    <!-- Option to save an item [CHAR LIMIT=NONE] -->
    <string name="save_item">Save Item</string>
    <!-- Menu option to delete item in editor [CHAR LIMIT=NONE] -->
    <string name="delete_item">Delete Item</string>
    <!-- Toast message that appears if you try to reduce the quantity below zero [CHAR LIMIT=NONE] -->
    <string name="quantity_below_zero">Quantity cannot be less than 0!</string>
    <!-- The subject line for an email intent launched through the Item Editor activity [CHAR LIMIT=NONE] -->
    <string name="email_subject">Order Request</string>
    <!-- The email address for an email intent launched through the Item Editor activity [CHAR LIMIT=NONE] -->
    <string name="email_address">"inventorysuppliers@123.com"</string>
    <!-- A button in the Item Editor activity that allows a user to receive more of an item [CHAR LIMIT=NONE] -->
    <string name="edit_item_receive_button">Receive</string>
    <!-- A button in the Item Editor activity that allows a user to order an item from the supplier [CHAR LIMIT=NONE] -->
    <string name="order">Order</string>
    <!-- A TextView in the Inventory Activity for the item name [CHAR LIMIT=NONE] -->
    <string name="list_item_item_name">Item: </string>
    <!-- A TextView in the Inventory Activity for the item price [CHAR LIMIT=NONE] -->
    <string name="list_item_item_price">Price: </string>
    <!-- A TextView in the Inventory Activity for the item quantity [CHAR LIMIT=NONE] -->
    <string name="list_item_item_quantity">On Hand: </string>
    <!-- A TextView for a header in the Item Editor labelled Overview [CHAR LIMIT=NONE] -->
    <string name="item_editor_overview">Overview</string>
    <!-- A TextView for a header in the Item Editor for the product name [CHAR LIMIT=NONE] -->
    <string name="item_editor_product">Product Name</string>
    <!-- A TextView for a header in the Item Editor for the product price [CHAR LIMIT=NONE] -->
    <string name="item_editor_price">Product Price</string>
    <!-- A TextView for a header in the Item Editor for the product quantity [CHAR LIMIT=NONE] -->
    <string name="item_editor_quantity">Product Quantity</string>
    <!-- A TextView for a header in the Item Editor labelled manage [CHAR LIMIT=NONE] -->
    <string name="item_editor_manage_heading">Manage</string>
    <!-- A TextView for a header in the Item Editor labelled Image [CHAR LIMIT=NONE] -->
    <string name="item_editor_image_heading">Image</string>
    <!-- An EditText in the ItemEditor activity that allows a user to update the quantity [CHAR LIMIT=NONE] -->
    <string name="item_editor_edit_text_quantity">00</string>

</resources>
